--- a/src/stylesheets/CardGrid.css
+++ b/src/stylesheets/CardGrid.css
@@ -1,10 +1,19 @@
 .card-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 1rem;
 }
 .card-grid > * {
-    border: black solid 1px;
+    border: yellow solid 1px;
+    border-radius: 15px;
     padding: 0.5rem;
     background-color: orangered;
+    transition: all 1s ease;
+}
+.card-grid > *:hover {
+    background-color: orange;
+    box-shadow: 0px 0px 10px 5px greenyellow;
+    color: darkgreen;
+    cursor: pointer;
+    font-size: 120%;
 }
